2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/08_plus_float_aff_float.deca
// Description :
//      afféctation d'une opération plus entre (float , int) , (float , float ) , (int , float ) dans un float
// Resultats :
//    Valide 
//
// Historique :
// cree le 09/01/2024

{
    float  f1 = 1 + 2.5;

    float  f2 =  2.5 + 1;

    float f3 = 1.3 + 4.5 ;


}