2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/22_float_string.deca
// Description :
//      opération moins entre string et float 
// Resultats :
//    Erreur Contexteulle : ligne 11 : l'opération - n'est pas possible entre 'string' et 'float'
//
// Historique :
// cree le 10/01/2024

{
    float f1 =1.55 ;
    "bonjour" - f1 ;
}